Bug 996588 - Unable to connect to wifi network with double quotes (") in ssid. r=fabrice